Display information when trying to access restricted Arachne image

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                   imageUrl = 'icons/key-solid.svg';
                   linkText = 'Failed to load Arachne data.';
                   linkUrl = arachnePath.substr(0, arachnePath.indexOf('/data')) + '/search?q=' + imageName;
-                  smallText = '-';
+                  smallText = 'No viewing of restricted Arachne images at this point.';
               }
               else {
                   imageUrl = arachnePath + '/image/' + searchJson['entities'][0]['entityId'];
